        Added a Pastoral heading to the main menu and moved Behaviour, Attendance and Individual Needs

    Tweaks & Additions
        System: updated SpreadsheetRenderer to support exporting data from multiple DataTables
        System: switched interface strings from Value Added License to Catalyst License
        Activities: added the option for parents to register their children in activities
        Individual Needs: enabled viewing IN records for past students as read-only
        Messenger: enabled resending to any recipient when read receipts are off in Send Report
        Messenger: added clarifying text to Applicants target which only includes Accepted applications
        Planner: added a highlight for Off Timetable students in View Lesson Plan attendance list
        Planner: added a button to access Linked Markbook from Edit Lesson Plan page
        Planner: added a highlight for Off Timetable Lessons in the "Year Overview" mode
        Planner: restricted visibility of user photos in Lesson Plans based on planner access permissions
        Reports: updated Attendance data source to handle Off Timetable days where no attendance is taken
        Reports: prevented deletion of template assets that are not set to inactive
        Reports: added a way for tracking and displaying who last edited an asset
        Staff: limited Add Staff list to users who are not already staff but have a staff role
        Staff: added an option to separate the Staff Duty page into tabs by duty type
        Students: fixed error on student profile related to a typo in studentMenuCategory variable
        System Admin: added the option to upload user photos in jpeg format
        Timetable: added coverage details for staff duty and activities on the timetable
        User Admin: added Sibling as option to Emergency Relationship select
        User Admin: added Prof. as an option in Title select

    Bug Fixes